--- a/Exercicios/Modulo 04/ex026/mq005/estilos/media-query.css
+++ b/Exercicios/Modulo 04/ex026/mq005/estilos/media-query.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (min-widht: 768px) {
+@media screen and (min-width: 768px) {
     i#burger {
         display: none;
     }
